--- a/frontend/src/pages/components/leftbar/leftbar.css
+++ b/frontend/src/pages/components/leftbar/leftbar.css
@@ -1,7 +1,8 @@
 .profilePicture{
    
     width: 200px;
-   
+    width: 200px;
+    object-fit: cover;
 }
 #leftbar span{
     /* color: #478ba2 ; */
