--- a/frontend/src/pages/login/login.css
+++ b/frontend/src/pages/login/login.css
@@ -3,7 +3,7 @@ body, html {
    
   }
   .bg {
-    background-image: url("../assets/background.png");
+    /* background-image: url("assets/background.png"); */
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
